persistencia creacion de clases

--- a/PetShopAPI/src/main/resources/application-dev.properties
+++ b/PetShopAPI/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 server.port=8095
 server.servlet.context-path=/PetShopAPI
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Tienda
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=PetApiDB
 spring.datasource.username=sa
 spring.datasource.password=master123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
